--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,27 +1,31 @@
 
-<div class="container">
-
-	<h1>Search Steam Name</h1>
-	<%= form_tag todos_path, :method => 'get' do %>
-	    <%= text_field_tag :response, params[:response] %>
-	    <%= submit_tag "Search", :name => nil%>
-	<% end %>
-
-
-	<%if @response['gamesList']%>
-
-		<%(@response['gamesList']['games']['game']).each do |stuff|%>
-			
-			<%= image_tag (stuff['logo'])%>
-			<%= check_box_tag stuff['appID'] %>
-			<%= label_tag stuff['appID'], 'Play Game'%>
-
-		    <input type="date" class="datepicker">
-		
-		<%end%>
-	<%else%>
-		User Profile is Private or does not exist...
-	<%end%>
-
-</div>
-
+<div class="parallax-container">
+    <div class="parallax"><%=image_tag src="dance.gif"%></div>
+  </div>
+  <div class="section black">
+    <div class="row container">
+      <h2 class="header">WECOME TO ROBOR</h2>
+      <p>YOUR ORGANIZER FOR PLAYING GAMES</p>
+    </div>
+  </div>
+  <div class="parallax-container">
+    <div class="parallax"><%=image_tag src="dance2.gif"%></div>
+  </div>
+  <div class="section black">
+    <div class="row container">
+      <h2 class="header">CLICK THE TAGS</h2>
+      <p>GET A GAME LIST TO ORGANIZE WHEN YOU WANT TO PLAY YOUR GAMES</p>
+    </div>
+  </div>
+  <div class="parallax-container">
+    <div class="parallax"><%=image_tag src="dance3.gif"%></div>
+  </div>
+  <div class="section black">
+    <div class="row container">
+      <h2 class="header">CREATED BY</h2>
+      <p>JEFFREY WU - CUZ I GOT TOO MANY GAMES ON MY LIST</p>
+    </div>
+  </div>
+  <div class="parallax-container">
+    <div class="parallax"><%=image_tag src="dance4.gif"%></div>
+  </div>
