--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,7 @@
 
 body{
 	font-family: 'Press Start 2P', cursive;
-        background-image: url('matrix.gif');
+        background: url('matrix.gif');
 		background-attachment: fixed;
         /*background-repeat: no-repeat; *= require fullcalendar_engine/application
 */
