--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -1,9 +1,6 @@
-// Place all the styles related to the todos controller here.
+// Place all the styles related to the Events controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
-.parallax img{
-	display: block; 
-	
+select{
+	display:inline;
 }
-
