--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -10,22 +10,24 @@
       <% end %>
         <li class="waves-effect waves-light"><a href="/">home</a></li>
         <li class="waves-effect waves-light"><a href="../calendars">calendar</a></li>
-        <li class="waves-effect waves-light"><a href="../todos/create">list</a></li>
+        <li class="waves-effect waves-light"><a href="../todos">list</a></li>
         <li class="waves-effect waves-light"><a href="../musics">music</a></li>
         <li class="waves-effect waves-light"><a href="../maps">map</a></li>
+        <li class="waves-effect waves-light"><a href="../events">event</a></li>
       </ul>
       <ul class="side-nav" id="mobile-demo">
         <%if current_user%>
       <li class="waves-effect waves-light">  <%= link_to "Sign Out", signout_path, id: "sign_out" %></li>
       <% else %>
-          <li class="waves-effect waves-light"><%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %></li>
+          <li class="waves-effect waves-light"><%= link_to "Google Sign In", "/auth/google_oauth2", id: "sign_in" %></li>
       <% end %>
         <li class="waves-effect waves-light"><a href="/">home</a></li>
         <li class="waves-effect waves-light"><a href="../calendars">calendar</a></li>
-        <li class="waves-effect waves-light"><a href="../todos/create">list</a></li>
+        <li class="waves-effect waves-light"><a href="../todos">list</a></li>
         <li class="waves-effect waves-light"><a href="../musics">music</a></li>
         <li class="waves-effect waves-light"><a href="../maps">map</a></li>
-      
+        <li class="waves-effect waves-light"><a href="../events">event</a></li>
+
       </ul>
     </div>
   </nav>
