changed from cdn to js files

--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -65,7 +65,7 @@
     waveform(analyser);
     drawSpectrum(analyser,text);
     d3bar(analyser);
-    d3hex(analyser);
+    // d3hex(analyser);
 
 
 // function d3hex(analyser){
