--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -19,7 +19,7 @@
     </head>
     
     <div class="container">    
-        <audio preload controls src="initiald.mp3" type="audio/mp3" style="width: 800px">
+        <audio controls src="initiald.mp3" type="audio/mp3" style="width: 800px">
              Your browser is not compatible with HTML5.
         </audio>
         <div id="visualizer" >
