--- a/app/views/musics/main.html.erb
+++ b/app/views/musics/main.html.erb
@@ -1,9 +1,14 @@
+<style>
+body{
+  background: none;
+}
+</style>
 
 <div class="parallax-container">
 <% if flash["warning"] %>
     <div class="warning"><%= flash["warning"] %></div>
   <% end %>
-    <div class="parallax"><%=image_tag src="dance.gif"%></div>
+    <div class="parallax"><%=image_tag src="landing.jpg"%></div>
   </div>
   <div class="section black">
     <div class="row container">
@@ -12,7 +17,7 @@
     </div>
   </div>
   <div class="parallax-container">
-    <div class="parallax"><%=image_tag src="dance2.gif"%></div>
+    <div class="parallax"><%=image_tag src="nintendo.jpg"%></div>
   </div>
   <div class="section black">
     <div class="row container">
@@ -21,7 +26,7 @@
     </div>
   </div>
   <div class="parallax-container">
-    <div class="parallax"><%=image_tag src="dance3.gif"%></div>
+    <div class="parallax"><%=image_tag src="classic.jpg"%></div>
   </div>
   <div class="section black">
     <div class="row container">
@@ -30,5 +35,5 @@
     </div>
   </div>
   <div class="parallax-container">
-    <div class="parallax"><%=image_tag src="dance4.gif"%></div>
+    <div class="parallax"><%=image_tag src="brawl.jpg"%></div>
   </div>
